--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -13,7 +13,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context="com.nagpal.shivam.vtudslab.DisplayActivity">
+        tools:context="com.nagpal.shivam.vtudslab.Activity.DisplayActivity">
 
         <HorizontalScrollView
             android:layout_width="match_parent"
