--- a/app/src/main/res/menu/menu_display_activity.xml
+++ b/app/src/main/res/menu/menu_display_activity.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/display_menu_item_refresh"
+        android:title="@string/refresh" />
+
+    <item
         android:id="@+id/menu_item_copy_display_activity"
         android:enabled="false"
         android:title="@string/copy" />
