--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,19 +30,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
+                    android:contentDescription="@string/back_button"
+                    android:foreground="?attr/selectableItemBackground"
                     android:paddingEnd="8dp"
                     android:paddingStart="8dp"
                     android:src="@drawable/ic_action_arrow_back" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:paddingEnd="8dp"
                     android:paddingStart="8dp"
                     android:text="@string/app_name"
                     android:textColor="@android:color/white"
                     android:textSize="24sp" />
+
             </LinearLayout>
 
             <ListView
@@ -51,6 +55,7 @@
                 android:layout_height="match_parent"
                 android:choiceMode="singleChoice"
                 android:listSelector="@color/listSelector" />
+
         </LinearLayout>
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
