--- a/app/src/main/res/layout/layout_content_main_activity.xml
+++ b/app/src/main/res/layout/layout_content_main_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -8,7 +9,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_recycler_view_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
+        tools:listitem="@layout/layout_content_tile" />
 
     <TextView
         android:id="@+id/empty_text_view_main"
