--- a/app/src/main/res/layout/layout_content_tile.xml
+++ b/app/src/main/res/layout/layout_content_tile.xml
@@ -8,9 +8,13 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="6dp"
+        android:foreground="?attr/selectableItemBackground"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp">
+        app:cardElevation="2dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,7 +28,7 @@
                 android:background="@drawable/shape_background_number"
                 android:gravity="center"
                 android:textColor="@android:color/white"
-                android:textSize="36sp"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +48,6 @@
                 app:layout_constraintStart_toEndOf="@+id/layout_content_text_view_number"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="TextView" />
-
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
