--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,8 +49,8 @@
 
             </LinearLayout>
 
-            <ListView
-                android:id="@+id/nav_list_main_activity"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/main_recycler_view_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:choiceMode="singleChoice"
