--- a/app/src/main/res/layout/layout_card_se_ssp_mf.xml
+++ b/app/src/main/res/layout/layout_card_se_ssp_mf.xml
@@ -37,7 +37,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/files_container"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/serial_order" />
