--- a/app/src/main/res/layout/content_repository.xml
+++ b/app/src/main/res/layout/content_repository.xml
@@ -11,7 +11,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_repository_recycler_view_repository"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        tools:listitem="@layout/layout_card_repository" />
 
     <TextView
         android:id="@+id/empty_text_view_main"
