--- a/app/src/main/res/layout/layout_card_se_ssp_sf.xml
+++ b/app/src/main/res/layout/layout_card_se_ssp_sf.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -18,7 +18,7 @@
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp">
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -51,7 +51,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="TextView" />
 
-            </android.support.constraint.ConstraintLayout>
-        </android.support.v7.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
     </FrameLayout>
 </layout>
