--- a/app/src/main/res/layout/layout_card_single_files_without_sub_parts.xml
+++ b/app/src/main/res/layout/layout_card_single_files_without_sub_parts.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:foreground="?attr/selectableItemBackground">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
@@ -39,7 +39,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="TextView" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 
 
