--- a/app/src/main/res/layout/layout_card_single_sub_parts_without_files.xml
+++ b/app/src/main/res/layout/layout_card_single_sub_parts_without_files.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:foreground="?attr/selectableItemBackground">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
@@ -40,6 +40,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="TextView" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
