Refractor package names to lower case to follow convention

--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:clipToPadding="false"
-        tools:context="com.nagpal.shivam.vtucslab.Activity.DisplayActivity">
+        tools:context="com.nagpal.shivam.vtucslab.activities.DisplayActivity">
 
         <ScrollView
             android:id="@+id/vertical_scroll"
