--- a/app/src/main/res/layout/activity_program.xml
+++ b/app/src/main/res/layout/activity_program.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ProgramActivity">
+    tools:context=".activities.ProgramActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activity_program_recycler_view_program"
