--- a/app/src/main/res/navigation/details_navigation_graph.xml
+++ b/app/src/main/res/navigation/details_navigation_graph.xml
@@ -19,5 +19,23 @@
         <argument
             android:name="title"
             app:argType="string" />
+        <action
+            android:id="@+id/action_programFragment_to_contentActivity"
+            app:destination="@id/contentActivity" />
     </fragment>
+    <activity
+        android:id="@+id/contentActivity"
+        android:name="com.nagpal.shivam.vtucslab.activities.ContentActivity"
+        android:label="activity_content"
+        tools:layout="@layout/activity_content">
+        <argument
+            android:name="baseUrl"
+            app:argType="string" />
+        <argument
+            android:name="fileName"
+            app:argType="string" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+    </activity>
 </navigation>
