--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/repositoryFragment"
         android:name="com.nagpal.shivam.vtucslab.screens.repository.RepositoryFragment"
-        android:label="fragment_repository"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_repository">
         <action
             android:id="@+id/action_repositoryFragment_to_detailsActivity"
