cleanup: Remove the leftover old files post the MVVM migration

--- a/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -4,11 +4,10 @@
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/menu_item_repository"
+            android:id="@+id/repositoryFragment"
             android:title="@string/repository" />
         <item
             android:id="@+id/menu_item_exit"
             android:title="@string/exit" />
     </group>
-
 </menu>
