--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context="com.nagpal.shivam.vtucslab.activities.DisplayActivity">
+    tools:context=".screens.display.DisplayFragment">
 
     <ScrollView
         android:id="@+id/vertical_scroll"
