--- a/app/src/main/res/layout/fragment_program.xml
+++ b/app/src/main/res/layout/fragment_program.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ProgramActivity">
+    tools:context=".screens.programs.ProgramFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
